--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "stuttter/wp-blog-meta",
   "description": "A global, joinable meta-data table for your WordPress Multisite sites",
   "homepage": "https://chat.flox.io/support/channels/wp-blog-meta",
-  "type": "wordpress-plugin",
+  "type": "wordpress-muplugin",
   "require": {
     "php": ">=5.2",
     "composer/installers": "^1.0"
